--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,22 +19,23 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install deps
         run: |
-            sudo apt install pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra ghostscript
+            sudo apt update
+            sudo apt install -y pandoc texlive-latex-base texlive-fonts-recommended texlive-latex-extra ghostscript moreutils plantuml
             pip install -r requirements.txt
       - name: Generate site
         run: make
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
