Update weekly meeting days

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "start_date": "2025-08-25",
   "end_date": "2025-12-05",
-  "lecture_days": "MTW",
-  "lab_days": "R",
+  "lecture_days": "MTWF",
+  "lab_days": "",
   "breaks": [
     "2025-09-01 Labor Day",
     "2025-10-16 Fall Break",
